--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ h1{
   color:red;
   text-shadow: 2px 2px 6px #000;
 }
+
 body {
   width:100%;
-  height:1400;
+  height:1600px;
   margin: auto;
   background-image:url("https://img-rp.vhd.me/4757888_l5.jpg");
   background-attachment: fixed;
@@ -19,10 +20,9 @@ body {
 
 #page{
   width:100%;
-  height:100%;
+  height:1800px;
   margin: 0 auto;
   background-color: rgba(70,30,10,0.5);
-
 
 }
 header {
@@ -32,12 +32,13 @@ header {
 div{
   display:block;
 }
+
+
 #bodyDiv{
   width:90%;
   height:90%;
   margin: 0 auto;
-
-
+  display:block;
 
 }
 
